--- a/huffman/CMakeLists.txt
+++ b/huffman/CMakeLists.txt
@@ -19,7 +19,7 @@ add_executable(huffman
         utility/file_compressor.h
         utility/file_decompressor.cpp
         utility/file_decompressor.h
-        utility/main.cpp)
+        utility/main.cpp library/encryptor.cpp library/encryptor.h library/decryptor.cpp library/decryptor.h)
 
 if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11 -pedantic")
